# ebook_homebrew

./: .appveyor.yml  .codeclimate.yml  .gitignore  .gitmodules  .scrutinizer.yml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PITCHME.md  PITCHME.yaml  PULL_REQUEST_TEMPLATE.md  Procfile  README.md  README.rst  SECURITY.md  app.json  azure-pipelines.yml  fileName2SerialNumber.py  pytest.ini  requirements-test.txt  requirements.txt  setup.cfg  shippable.yml  tox.ini
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: dockerimage.yml  pythonpackage.yml
assets/gitpitch/css/: main.css
doc_src/: client.rst  conf.py  deploy2heroku.rst  ebook_homebrew.cmd.rst  ebook_homebrew.rst  ebook_homebrew.utils.rst  howtouse.rst  index.rst  installation.rst  loadtest.rst  make_docs.py
doc_src/_static/: schema.yml
doc_src/releasenotes/: 2.1.0.rst  2.1.1.rst  2.1.3.rst  index.rst
docker/: Dockerfile
docs/: .buildinfo  client.html  deploy2heroku.html  ebook_homebrew.cmd.html  ebook_homebrew.commands.html  ebook_homebrew.html  ebook_homebrew.models.html  ebook_homebrew.utils.html  genindex.html  howtouse.html  http-routingtable.html  index.html  installation.html  loadtest.html  modules.html  objects.inv  overview.html  py-modindex.html  restapi.html  search.html  searchindex.js  setup.html
docs/_modules/: index.html
docs/_modules/ebook_homebrew/: archive.html  change_filename.html  cli.html  convert.html  core.html  exceptions.html  helper.html  make_pdf.html  make_zip.html  rdb.html  rename.html  rest.html
docs/_modules/ebook_homebrew/commands/: cli.html
docs/_modules/ebook_homebrew/models/: models.html  rest_models.html  uploaded_files_models.html
docs/_modules/ebook_homebrew/utils/: exceptions.html  logging.html
docs/_modules/marshmallow/: schema.html
docs/_modules/sqlalchemy/orm/: attributes.html
docs/_sources/: client.rst.txt  deploy2heroku.rst.txt  ebook_homebrew.commands.rst.txt  ebook_homebrew.models.rst.txt  ebook_homebrew.rst.txt  ebook_homebrew.txt  ebook_homebrew.utils.rst.txt  ebook_homebrew.utils.txt  howtouse.rst.txt  index.rst.txt  installation.rst.txt  loadtest.rst.txt  modules.rst.txt  modules.txt  overview.rst.txt  restapi.rst.txt
docs/_sources/releasenotes/: 1.0.0.rst.txt  1.1.0.rst.txt  2.0.0.rst.txt  index.rst.txt
docs/_static/: schema.yml
docs/releasenotes/: 1.0.0.html  1.1.0.html  2.0.0.html  2.1.0.html  2.1.1.html  2.1.3.html  index.html
ebook_homebrew/: __init__.py  archive.py  change_filename.py  cli.py  convert.py  core.py  exceptions.py  helper.py  make_pdf.py  make_zip.py  rdb.py  rename.py  rest.py
ebook_homebrew/_libs/convert/: go.mod  main.go
ebook_homebrew/cmd/: cli.py
ebook_homebrew/models/: models.py  rest_models.py  uploaded_files_models.py
ebook_homebrew/utils/: exceptions.py  logging.py
examples/: rename_file_convert_pdf.py
examples/ebook-homebrew-vue-client/: README.md  index.html  package-lock.json  package.json
examples/ebook-homebrew-vue-client/src/: main.js
examples/ebook-homebrew-vue-client/src/components/: FileUpload.vue
examples/ebook-homebrew-vue-client/src/mixins/: const.js
examples/rename_convert/: rename_file_convert_pdf.py
examples/templates/: base.html  index.html  upload.html
examples/use_rest_api/: README.rst  requirements.txt
examples/use_rest_api/src/: main.py
examples/web_gui/: README.rst  requirements.txt
examples/web_gui/ebook_homebrew_webUI/: application.py
examples/web_gui/ebook_homebrew_webUI/static/css/: styles.css
examples/web_gui/ebook_homebrew_webUI/templates/: base.html  index.html
examples/web_gui/src/static/css/: styles.css
examples/web_gui/src/templates/: upload.html
fn2sn/: change_filename.py
fn2sn/utils/: exceptions.py  logging.py  logging.yaml
tests/: test_archive.py  test_cli.py  test_convert.py  test_core.py  test_helper.py  test_rename.py  test_rest.py
tests/assets/: schema.yml
tests/it/: test_it_archive.py  test_it_convert.py  test_it_helper.py  test_it_rename.py  test_it_rest.py
tests/ut/: test_core.py  test_rdb.py  test_rest.py
tests/ut/assets/: schema.yml
