[metadata]
name = ebook_homebrew
version = attr: ebook_homebrew.__version__
description = Rename image file to only digit name and convert ebook files.
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/tubone24/ebook_homebrew
project-urls =
    Documentation = https://pyscaffold.org/
author = tubone24
author_email = tubo24@tubone-project.xyz
keywords = ebook, rename, pdf
license = MIT
license-file = LICENSE
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages =
    ebook_homebrew
    ebook_homebrew.utils
setup_requires = setuptools
install_requires =
    Pillow==5.3.0
    PyPDF2==1.26.0
    PyYAML==3.13
tests_require = pytest
python_requires = >= 3.5
test_suite = tests

[options.extras_require]
develop =
    pytest
    pytest-cov
    pytest-pythonpath
docs =
    Sphinx
    cloud-sptheme

[bdist_wheel]
universal = true

[tool:pytest]
; If integration test, set option "--it"
addopts = -v -ra --pep8 --capture=no --showlocals --cov=ebook_homebrew --cov-report=html
log_cli = true
log_level = NOTSET
log_file_level = INFO
timeout = 5
python_paths = ./ebook_homebrew ./ebook_homebrew/utils
pep8ignore =
    E501
    doc_src/*.py ALL
    tests/*.py ALL
    tests/it/*.py ALL

[flake8]
max-line-length = 120
doctests = True
exclude =
    .git
    .eggs
    __pycache__
    tests/*.py
    docs/
    build/
    dist/
    doc_src/*.py
    tests/it/*.py

[options.entry_points]
console_scripts =
    ebookhomebrew = ebook_homebrew.cli:main
