[metadata]
name = ebook_homebrew
version = attr: ebook_homebrew.__version__
description = Rename image file to only digit name and convert ebook files.
long_description = file: README.rst, CHANGELOG.rst
url = https://github.com/tubone24/ebook_homebrew
project-urls =
    Documentation = https://ebook-homebrew.readthedocs.io/en/latest/
    ProjectBlog = https://tubone-project24.xyz/index.php/work/ebook_homebrew/
author = tubone24
author_email = tubo.yyyuuu@gmail.com
keywords = ebook, rename, pdf
license = MIT
license-file = LICENSE
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages =
    ebook_homebrew
    ebook_homebrew.utils
setup_requires = setuptools
install_requires =
    Pillow>=5.3.0
    PyPDF2==1.26.0
    PyYAML>=4.2b1
tests_require =
    pytest==4.0.2
    pytest-cov==2.6.0
    pytest-pythonpath==0.7.3
    flake8==3.6.0
    pep8==1.7.1
    pyflakes==2.0.0
    pytest-flake8==1.0.2
    pytest-pep8==1.0.6
    coverage==4.5.2
    codecov==2.0.15
python_requires = >= 3.5
test_suite = tests

[options.extras_require]
develop =
    black==18.9b0
    pytest==4.4.0
    pytest-cov==2.6.1
    pytest-pythonpath==0.7.3
    flake8==3.6.0
    pep8==1.7.1
    pyflakes==2.0.0
    pytest-flake8==1.0.4
    pytest-pep8==1.0.6
    coverage==4.5.3
    codecov==2.0.15
docs =
    Sphinx==2.0.0
    sphinx-rtd-theme==0.4.3

[bdist_wheel]
universal = true

[tool:pytest]
; If integration test, set option "--it"
addopts = -v -ra --pep8 --capture=no --showlocals
log_cli = true
log_level = NOTSET
log_file_level = INFO
timeout = 5
python_paths = ./ebook_homebrew ./ebook_homebrew/utils
pep8ignore =
    E501
    doc_src/*.py ALL
    tests/*.py ALL
    tests/it/*.py ALL

[flake8]
max-line-length = 120
doctests = True
exclude =
    .git
    .eggs
    __pycache__
    tests/*.py
    docs/
    build/
    dist/
    doc_src/*.py
    tests/it/*.py

[options.entry_points]
console_scripts =
    ebookhomebrew = ebook_homebrew.cli:main
