[metadata]
name = ebook_homebrew
version = attr: ebook_homebrew.__version__
description = Rename image file to only digit name and convert ebook files.
long_description = file: README.rst, CHANGELOG.rst
url = https://github.com/tubone24/ebook_homebrew
project-urls =
    Documentation = https://ebook-homebrew.readthedocs.io/en/latest/
    ProjectBlog = https://tubone-project24.xyz/index.php/work/ebook_homebrew/
author = tubone24
author_email = tubo.yyyuuu@gmail.com
keywords = ebook, rename, pdf, rest
license = MIT
license-file = LICENSE
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages =
    ebook_homebrew
    ebook_homebrew.utils
    ebook_homebrew.models
setup_requires = setuptools
install_requires =
    Pillow>=5.3.0
    PyPDF2==1.26.0
    PyYAML>=4.2b1
    responder==1.3.1
    uvloop==0.12.*; sys_platform != 'win32' and sys_platform != 'cygwin' and sys_platform != 'cli'
    marshmallow==2.19.5
tests_require =
    pytest==4.0.2
    pytest-cov==2.6.0
    pytest-pythonpath==0.7.3
    flake8==3.6.0
    pep8==1.7.1
    pyflakes==2.0.0
    pytest-flake8==1.0.2
    pytest-pep8==1.0.6
    coverage==4.5.2
    codecov==2.0.15
    black==18.9b0
python_requires = >= 3.6
test_suite = tests

[options.extras_require]
develop =
    black==19.3b0
    pytest==4.5.0
    pytest-cov==2.7.1
    pytest-pythonpath==0.7.3
    flake8==3.7.7
    pep8==1.7.1
    pyflakes==2.1.1
    pytest-flake8==1.0.4
    pytest-pep8==1.0.6
    coverage==4.5.3
    codecov==2.0.15
docs =
    Sphinx==2.1.2
    sphinx-rtd-theme==0.4.3
    sphinxcontrib-openapi==0.4.0
    sphinxcontrib-websupport==1.1.2

[bdist_wheel]
universal = true

[tool:pytest]
; If integration test, set option "--it"
addopts = -v -ra --pep8 --showlocals
log_cli = false
log_level = INFO
log_file_level = INFO
timeout = 5
python_paths = ./ebook_homebrew ./ebook_homebrew/utils ./ebook_homebrew/models
pep8ignore =
    E501
    doc_src/*.py ALL
    tests/*.py ALL
    tests/it/*.py ALL

[flake8]
max-line-length = 120
doctests = True
exclude =
    .git
    .eggs
    __pycache__
    tests/*.py
    docs/
    build/
    dist/
    doc_src/*.py
    tests/it/*.py

[options.entry_points]
console_scripts =
    ebookhomebrew = ebook_homebrew.cli:main
